# hamlet-unified-complete-2027

./: # Merge_MasterCandidates.ps1  .env  .env.example  .env.production.example  .gitignore  .railwayignore  .vercelignore  ALL_BRANCHES_ANALYSIS.md  BACKEND_DEPLOYMENT_REPORT.md  CLOUDFLARE_DEPLOYMENT_GUIDE.md  CLOUDFLARE_INTEGRATION.md  CLOUDFLARE_INTEGRATION_REPORT.md  CLOUDFLARE_STATUS_SUMMARY.md  DATA_VALIDATION_REPORT_20251015_005227.txt  DATA_VALIDATION_REPORT_20251015_012554.txt  DEPLOYMENT.md  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_EXECUTION_CHECKLIST.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_STATUS_REPORT.md  DEPLOYMENT_STRATEGY.md  DEPLOY_BACKEND.bat  DEPLOY_BACKEND.sh  DEPLOY_NOW.md  DESIGN_RESCUE_PLAN.md  Deploy_Frontend.ps1  EMERGENCY_FRONTEND_SUPPORT.md  Evaluate-Backends.ps1  FIX_ERROR_522.md  HamletAssessment.ps1  INTEGRATION_CHECKLIST.md  MERGE_STATUS_SAFE.md  Merge_MasterCandidates.ps1  OPEN_ME.txt  OPEN_SITE.bat  OPEN_SITE.sh  OPS.md  PROGRESS_REPORT_30MIN.md  PROJECT_COMPARISON.md  Procfile  (+55 more)
.cloudflare/: pages.json
agents/: agent1.js  agent2.js  agent3.js  agent4.js  agent5.js
amlet-live/: index.html
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .gitignore  API_CONTRACT.md  DEPLOYMENT.md  Dockerfile  RAILWAY_FIX.md  README.md  package-lock.json  package.json  railway.toml  server.js  server.mjs  tsconfig.json  unified-server.js  vercel.json
clean_election_data/: ElectionCandidates_English.csv  agent1_new.csv  agent2_subset_raw.csv  agent4_new.csv
components/: AuthModal.tsx  BusinessDirectory.tsx  CategoryGrid.tsx  CityGuide.tsx  (+17 more)
(+188 files in other folders)
